--- a/README.Rmd
+++ b/README.Rmd
@@ -13,21 +13,16 @@ This is a collection of learning materials and code snippets to get your shiny a
 * [Semantic UI](https://semantic-ui.com) For simpple and beatiful UI
     + [shiny.semantic](https://github.com/Appsilon/shiny.semantic) Shiny support for powerful Semantic UI library.
     + [semantic.dashboard](https://github.com/Appsilon/semantic.dashboard) Dashboard with Semantic UI Support for Shiny
-* Shiny Modules: organize your app as many simple shiny apps. 
-
-
-<!---Provides beatiful css classes that are intuitavely to explore, add and remeber. Code readability is also a plus for semantic css classes.--->
-
-* Visuals
+* Architecture:
+    + Shiny Modules: organize your app as many simple shiny apps. 
+        - https://github.com/strboul/supreme
+* Visuals:
     - [Apexchart](https://apexcharts.com/) A modern JS charting library to build interactive charts with a simple and open source API.
         + [apexcharter](https://github.com/dreamRs/apexcharter) Apexchart R wrapper
         + https://dreamrs.github.io/apexcharter/index.htm
-
-
 * Extensions:
     - `shinyjs`: inject javascript into your UI
     - [`shinyuser`](https://github.com/systats/shinyuser) login and user managment tools
-
 * Tools:
     - [reactlog](https://github.com/rstudio/reactlog) easy reactivity
     debugger
