--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(echo = T, eval = F)
 
 # shinyideas
 
-This is a collection of learning materials and code snippets to get your shiny app to the next levels. I will dive into 
+This is a collection of learning materials and code snippets to get your shiny app to the next levels. We will dive into 
 
 * [Semantic UI](https://semantic-ui.com) For simpple and beatiful UI
     + [shiny.semantic](https://github.com/Appsilon/shiny.semantic) Shiny support for powerful Semantic UI library.
@@ -18,15 +18,15 @@ This is a collection of learning materials and code snippets to get your shiny a
         - https://github.com/strboul/supreme
 * Visuals:
     - [Apexchart](https://apexcharts.com/) A modern JS charting library to build interactive charts with a simple and open source API.
-        + [apexcharter](https://github.com/dreamRs/apexcharter) Apexchart R wrapper
+        + [`apexcharter`](https://github.com/dreamRs/apexcharter) Apexchart R wrapper
         + https://dreamrs.github.io/apexcharter/index.htm
 * Extensions:
     - `shinyjs`: inject javascript into your UI
     - [`shinyuser`](https://github.com/systats/shinyuser) login and user managment tools
 * Tools:
-    - [reactlog](https://github.com/rstudio/reactlog) easy reactivity
+    - [`reactlog`](https://github.com/rstudio/reactlog) easy reactivity
     debugger
-    - [html2r](https://github.com/alandipert/html2r) Convert HTML to R 
+    - [`html2r`](https://github.com/alandipert/html2r) Convert HTML to R 
 
 
 
