--- a/README.Rmd
+++ b/README.Rmd
@@ -128,6 +128,7 @@ At this point it makes sense to go to the official documentation to see other op
 * SQLiteStudio
 
 ```{r, eval = F}
+# devtools::document()
 library(RSQLite)
 
 con <- RSQLite::dbConnect(RSQLite::SQLite(), "my_first_DB.db")
